# RealmCrafterOrigins

./: .gitignore  AGENTS.md  ANIMATION_SYSTEM_SPEC.md  CLAUDE.md  FASE2_DETALHE.md  FASE5_DETALHE.md  GUE_COMPARISON.md  GUE_ORIGINAL_REFERENCE.md  MIGRATION_RENDERER.md  README.md  SYSTEMS.md  build-client.bat  build-gue.bat  build-launcher.bat  build-project-manager.bat  build-server.bat  build-terrain-editor.bat  check-prereqs.bat  check-prereqs.ps1  pack-release.ps1  run-terrain-editor.bat  stash-with-bug.patch
.claude/: settings.local.json
SkeletalAnimation-master/: README.md
SkeletalAnimation-master/src/shaders/: depth.frag  depth.vert
client/: CMakeLists.txt
client/shaders/: actor.frag  actor.vert  terrain.frag  terrain.vert
client/src/audio/: audio.cpp  audio.h
client/src/core/: derived_stats.h  main.cpp  paths.cpp  paths.h  player_controller.cpp  player_controller.h  window.cpp  window.h
client/src/gameplay/: ingame_packet_gate.cpp  ingame_packet_gate.h  kit_pool.cpp  kit_pool.h  skill_state.cpp  skill_state.h
client/src/input/: input_system.cpp  input_system.h
client/src/net/: codec.h  connection.cpp  connection.h  protocol.h
client/src/renderer/: anim_controller.cpp  anim_controller.h  camera.cpp  camera.h  model.cpp  model.h  particles.cpp  particles.h  shader.cpp  shader.h  skybox.cpp  skybox.h
client/src/renderer/actors/: actor.cpp  actor.h
client/src/renderer/terrain/: terrain.cpp  terrain.h  terrain_chunk.cpp  terrain_chunk.h
client/src/ui/: char_select.cpp  char_select.h  chat.cpp  chat.h  chat_bubbles.cpp  chat_bubbles.h  controls_ui.cpp  controls_ui.h  floating_numbers.cpp  floating_numbers.h  game_state.h  inventory.cpp  inventory.h  login_screen.cpp  login_screen.h  party_panel.cpp  party_panel.h  quest_log.cpp  quest_log.h  skill_hotbar.cpp  skill_hotbar.h  skill_loadout_screen.cpp  skill_loadout_screen.h  spell_effects.cpp  spell_effects.h  spellbar.cpp  spellbar.h  ui_texture.cpp  ui_texture.h  util.h
doc/: FASE1_GAMEPLAY_CORE_PLAN.md  FASE2_VERTICAL_SLICE_GRAFICO_PLAN.md  FASE3_ETAPA_A_SMOKE_CHECKLIST.md  FASE3_ETAPA_C_SMOKE_CHECKLIST.md  FASE3_GUE_PARITY_MATRIX.md  FASE3_MMO_SYSTEMS_EXPANSION_PLAN.md  PLANO_AAA_COMBAT_ABILITY_RUNTIME.md  ROADMAP_EXECUCAO.md
doc/done/: BASELINE_FASE2_TRAINING_CAMP.md  CLAUDE.md  FASE1_DETALHE.md  FASE2_FECHAMENTO_2026-05-12.md  FASE2_VERTICAL_SLICE_GRAFICO_PLAN.md  FASE3_DETALHE.md  FASE4_DETALHE.md  FASE6_DETALHE.md  GRAPHICS_TUNING.md  LANDSCAPE_ARCHITECTURE.md  UE_LANDSCAPE_ANALYSIS.md  ZONES_EDITOR_PLAN.md
docs/: TECH_DEBT.md  WEAPON_KITS_ROADMAP.md
glRenderer/: Camera.ixx  DynamicBuffer.ixx  IndirectDraw.ixx  Input.cpp  Input.h  Light.ixx  Material.ixx  Mesh.ixx  Object.ixx  Renderer.cpp  Renderer.h  RendererHelpers.ixx  Shader.cpp  Shader.h  StaticBuffer.ixx  Texture.ixx  Utilities.ixx  glRenderer.sln  glRenderer.vcxproj  glRenderer.vcxproj.filters  imgui.ini  main.cpp
glRenderer/Resources/Shaders/: atrous_ssao.fs  calc_exposure.cs  esm_copy.fs  fullscreen_tex.fs  fullscreen_tri.vs  gBufferBindless.fs  gBufferBindless.vs  gPhongGlobal.fs  gaussian.cs  generate_histogram.cs  hdri_skybox.fs  msm_copy.fs  pbr_common.h  shadow.vs  texture.fs  tonemap.fs  volumetric.fs  vsm_copy.fs
glRenderer/lib/glm/: glm.hpp
graphify-out/: .graphify_chunk_01.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/server/: main.lua
scripts/server/events/: player_events.lua
scripts/server/npcs/: dialog.lua
scripts/server/spells/: fireball.lua  lightning_bolt.lua
server/: config.toml  go.mod  go.sum
server/cmd/server/: main.go
server/internal/accounts/: service.go
server/internal/admin/: admin.go
server/internal/db/: db.go  quests_test.go  schema.sql
server/internal/nav/: agent.go  navmesh.go  pathfinder.go
server/internal/net/: appearance.go  client.go  client_registry.go  codec.go  combat_fx_bridge.go  combat_mastery_bridge.go  combat_runtime.go  combat_runtime_test.go  combat_special_bridge.go  ingame_actions.go  ingame_actions_test.go  kit_pool.go  party_runtime.go  party_runtime_delta_test.go  party_runtime_test.go  party_xp.go  party_xp_test.go  quest_bridge.go  quest_runtime.go  quest_runtime_test.go  server.go  skill_state.go  skill_state_test.go
server/internal/protocol/: packets.go
server/internal/scripting/: api.go  combat_api_interrupt_test.go  npc_ai_decision_test.go  npc_combat_api_test.go  player_before_cast_intent_test.go  (+3 more)
shared/protocol/: packets.go  packets.h
shared/renderer/: CMakeLists.txt
tools/: CMakeLists.txt
tools/gue/: CMakeLists.txt
tools/gue/src/: asset_path.h  attribute_list.h  file_import.cpp  file_import.h  fx_preview_viewport.cpp  fx_preview_viewport.h  main.cpp  preview_viewport.cpp  preview_viewport.h  stb_image_write_impl.cpp  texture_importer.cpp  texture_importer.h  thumbnail_cache.cpp  thumbnail_cache.h  ui_widgets.h  zone_camera.h  zone_renderer.cpp  zone_renderer.h  zone_scene.cpp  zone_scene.h
tools/gue/src/nav/: geo_extract.h  navmesh_bake.h  navmesh_io.h
tools/gue/src/tabs/: actors.cpp  actors.h  areas.cpp  areas.h  combat_abilities.cpp  combat_abilities.h  drop_lists.cpp  drop_lists.h  equipment_slots.cpp  equipment_slots.h  fx_templates.cpp  fx_templates.h  input_maps.cpp  input_maps.h  items.cpp  items.h  media.cpp  media.h  progression_config.cpp  progression_config.h  quests.cpp  quests.h  settings.cpp  settings.h  spawn_points.cpp  spawn_points.h  spells.cpp  spells.h  weapon_kits.cpp  weapon_kits.h  zones.cpp  zones.h  zones_panels.cpp  zones_sidebar.cpp  zones_viewport.cpp
tools/gue/src/terrain/: brush.h  editable_terrain.cpp  editable_terrain.h  heightmap.cpp  heightmap.h  material.h  splatmap.h
tools/gue/src/util/: ability_json_validator.cpp  ability_json_validator.h
tools/launcher/: CMakeLists.txt  main.cpp
tools/perf/: analyze_entry_perf.py
tools/project_manager/: CMakeLists.txt  main.cpp
tools/terrain-editor/: CMakeLists.txt
tools/terrain-editor/src/: brush.h  camera.h  heightmap.cpp  heightmap.h  main.cpp  splatmap.h  terrain_renderer.cpp  terrain_renderer.h
(+81 files in other folders)
